# ruid

./: Cargo.toml
.github/workflows/: rust.yml
examples/: main.rs
src/: app.rs  lib.rs  main.rs  renderer.rs  simulation.rs  vectors.rs  web.rs
www/: index.html
